# gestao-comunitaria

./: .gitignore  .mcp.json  .prettierrc  CHANGELOG_SESSION.md  CLAUDE.md  ENQUETES_ESTADO_ATUAL.md  docker-compose.yml  enquetes-ajustes.md  enquetes-framework-visual.md  enquetes-tech-spec.md  enquetes-user-guide.md  eslint.config.js  estrutura.txt  migracao-dominios-aldeario.md  package-lock.json  package.json  persistencia-perfis-guia.md  rls_ecovila_v2_correcoes.sql  tarefas.md  tudoteca.md
.husky/: pre-commit
gestao-backend/: .dockerignore  Dockerfile  criar_perfil.py  fly.toml  migrar_acervo.py  migrar_para_supabase.py  migrate_wiki.py  pyproject.toml  render.yaml  seed_bolinhas.py  seed_rooms.py  seed_spaces.py  start-backend.bat
gestao-backend/app/: database.py  main.py
gestao-backend/app/models/: __init__.py  alert.py  booking.py  chamado.py  cota.py  enquete.py  enquete_comentario.py  evento.py  item.py  log.py  prestador.py  profile.py  sheet_row.py  space.py  wiki_article.py
gestao-backend/app/routers/: auth.py  bookings.py  chamados.py  cotas.py  enquetes.py  eventos.py  items.py  logs.py  prestadores.py  profiles.py  sheets.py  spaces.py
gestao-backend/app/schemas/: __init__.py  alert.py  auth.py  booking.py  chamado.py  cota.py  enquete.py  evento.py  item.py  prestador.py  profile.py  sheet_row.py  space.py  wiki_article.py
gestao-frontend/: .env  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
planilhas/: Canaa_Acervo_Comunitario.xlsx  (+1 more)
(+92 files in other folders)
