[project]
name = "gestao-backend"
version = "0.1.0"
description = "Backend gestão comunitária"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "psycopg[binary]>=3.3.2",
    "aiosqlite>=0.22.1",
    "sqlalchemy[asyncio]>=2.0.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"